--- a/k8s-manifests/backend-deployment.yaml
+++ b/k8s-manifests/backend-deployment.yaml
@@ -28,9 +28,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: backend-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 8000
       targetPort: 8000
